Fix visible focus indicator on menu buttons

--- a/packages/viewer/src/styles/buttons/button.module.scss
+++ b/packages/viewer/src/styles/buttons/button.module.scss
@@ -56,6 +56,6 @@
     }
 
     &:focus-visible {
-        box-shadow: 0 0 2px 2px var(--micromag-focus-color, #fff);
+        box-shadow: 0 0 2px 0 var(--micromag-focus-color, #fff);
     }
 }
