--- a/packages/viewer/src/styles/buttons/toggle-button.module.scss
+++ b/packages/viewer/src/styles/buttons/toggle-button.module.scss
@@ -3,7 +3,7 @@
     overflow: hidden;
 
     &:focus-within {
-        box-shadow: 0 0 2px 2px var(--micromag-focus-color, #fff);
+        // box-shadow: -2px -2px 2px 2px var(--micromag-focus-color, #fff);
     }
 }
 
